--- a/ui/package.json
+++ b/ui/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@patternfly/react-core": "^4.47.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.54",
     "@types/react-dom": "^16.9.8",
     "axios": "^0.20.0",
     "fuzzysort": "^1.1.4",
     "mobx": "^5.15.6",
-    "mobx-react": "^6.2.5",
+    "@types/react-test-renderer": "^16.9.3",
+    "mobx-react": "^6.3.0",
     "mobx-state-tree": "^3.17.2",
+    "patternfly": "^3.59.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
@@ -48,6 +53,9 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-react": "^1.1.7",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "2.1.2"
+    "prettier": "2.1.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
+    "enzyme-to-json": "^3.5.0"
   }
 }
