--- a/ui/package.json
+++ b/ui/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@patternfly/patternfly": "^4.35.2",
+    "@patternfly/react-core": "^4.47.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.54",
     "@types/react-dom": "^16.9.8",
+    "@types/react-test-renderer": "^16.9.3",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
