--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,10 @@
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.54",
     "@types/react-dom": "^16.9.8",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
+    "fuzzysort": "^1.1.4",
     "mobx": "^5.15.6",
+    "mobx-react": "^6.2.5",
     "mobx-state-tree": "^3.17.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
