--- a/ui/package.json
+++ b/ui/package.json
@@ -13,7 +13,8 @@
     "@types/node": "^12.12.54",
     "@types/react-dom": "^16.9.8",
     "@types/react-test-renderer": "^16.9.3",
-    "axios": "^0.19.2",
+    "axios": "^0.20.0",
+    "fuzzysort": "^1.1.4",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
     "mobx-state-tree": "^3.17.2",
