--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/javascript-time-ago": "^2.0.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.54",
     "@types/react-dom": "^16.9.8",
@@ -16,6 +17,7 @@
     "@types/react-test-renderer": "^16.9.3",
     "axios": "^0.20.0",
     "fuzzysort": "^1.1.4",
+    "javascript-time-ago": "^2.3.2",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
     "mobx-state-tree": "^3.17.2",
