Convert GH_CLIENT_ID value to $(clientid) for ci
Signed-off-by: vinamra28 <vinjain@redhat.com>

--- a/ui/config/10-config.yaml
+++ b/ui/config/10-config.yaml
@@ -6,4 +6,4 @@ metadata:
   namespace: tekton-hub
 data:
   API_URL: 'https://api.hub.tekton.dev'
-  GH_CLIENT_ID: ''
+  GH_CLIENT_ID: '$(clientid)'
