--- a/config.yaml
+++ b/config.yaml
@@ -55,11 +55,11 @@ catalogs:
 
 scopes:
   - name: agent:create
-    users: [Divyansh42, pratap0007, puneetpunamiya, sm43, sthaha, vdemeester]
+    users: [vinamra28, Divyansh42, pratap0007, puneetpunamiya, sm43, sthaha, vdemeester]
   - name: catalog:refresh
-    users: [Divyansh42, pratap0007, puneetpunamiya, sm43, sthaha, vdemeester]
+    users: [vinamra28, Divyansh42, pratap0007, puneetpunamiya, sm43, sthaha, vdemeester]
   - name: config:refresh
-    users: [Divyansh42, pratap0007, puneetpunamiya, sm43, sthaha, vdemeester]
+    users: [vinamra28, Divyansh42, pratap0007, puneetpunamiya, sm43, sthaha, vdemeester]
 
 default:
   scopes:
