--- a/api/.env.dev
+++ b/api/.env.dev
@@ -12,6 +12,7 @@ GH_CLIENT_SECRET="client-secret"
 JWT_SIGNING_KEY="TektonHub"
 ACCESS_JWT_EXPIRES_IN="1s"
 REFRESH_JWT_EXPIRES_IN="1s"
-GHE_URL=""
+ENTERPRISE_URL=""
+GIT_PROVIDER=""
 
 CONFIG_FILE_URL="file://../config.yaml"
